tdf#105386: crash with macro organizer

bt part:
0  SvTreeList::GetParent (this=0x560670dd2e40, pEntry=pEntry@entry=0x0) at /home/julien/lo/libreoffice/svtools/source/contnr/treelist.cxx:1693
1  0x00007fd90573298c in SvTreeListBox::GetParent (this=this@entry=0x560670dd0d60, pEntry=pEntry@entry=0x0)
    at /home/julien/lo/libreoffice/svtools/source/contnr/treelistbox.cxx:779
2  0x00007fd8dfc3b4d8 in basctl::ExtTreeListBox::NotifyAcceptDrop (this=0x560670dd0d60, pEntry=0x560670e90b20)
    at /home/julien/lo/libreoffice/basctl/source/basicide/moduldlg.cxx:180

Change-Id: I033440c1fcc50e2c7a0bb1eed0efa4559c514126
Reviewed-on: https://gerrit.libreoffice.org/34280
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>